# TTS-Subtitling-Studio

./: README.md  SPEC.md  TTS_Subtitling_Studio.spec  build.py  main.py  pyproject.toml  requirements.txt  simple_app.py  test_minimal.py
app/: __init__.py
app/engine/: __init__.py  audio_engine.py  srt_parser.py  translation_engine.py  tts_engine.py
app/models/: subtitle.py
app/ui/: audio_controls.py  drop_zone.py  main_page.py  model_panel.py  subtitle_editor.py  waveform_display.py
app/utils/: colors.py
